force-app/main/default/objects/RP_Delegate_Relationship__c/RP_Delegate_Relationship__c.object-meta.xml
<CustomObject>
    <label>RP Delegate Relationship</label>
    <nameField>
        <displayFormat>RPDEL-{000000}</displayFormat>
        <label>RP Delegate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RP Delegate Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>