force-app/main/default/objects/RP_Delegate_Relationship__c/fields/Delegate__c.field-meta.xml
<CustomField>
    <fullName>Delegate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RP Delegate Relationships</relationshipLabel>
    <relationshipName>RP_Delegate_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>