force-app/main/default/objects/RP_Delegate_Relationship__c/fields/Delegate_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Access_Level__c</fullName>
    <label>Delegate Access Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>