force-app/main/default/objects/RP_Delegate_Relationship__c/fields/Referring_Provider__c.field-meta.xml
<CustomField>
    <fullName>Referring_Provider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Referring Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RP Delegate Relationships (Referring Provider)</relationshipLabel>
    <relationshipName>RP_Delegate_Relationships1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>